womtool/src/test/resources/validate/wdl/wdl_draft3/invalid/bad_import/sub_dir/bad_import.wdl
version 1.0

import "not/a/file.wdl" as not_a_file

workflow call_a_bad_thing {
  call not_a_file.not_a_task
}
